# ha-cuk-ble

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  hacs.json  pyproject.toml
.claude/: TestInstructions.md
custom_components/cuktech_ble/: README.md  __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  select.py  sensor.py  strings.json  switch.py
custom_components/cuktech_ble/lib/: __init__.py  constants.py  fe95.py  firmware.py  models.py  ports.py  scanner.py  util.py  xiaomi_cloud.py
custom_components/cuktech_ble/lib/miot/: __init__.py  spec.py
custom_components/cuktech_ble/lib/xiaomi/: __init__.py  auth.py  crypto.py  properties.py  protocol.py  session.py
custom_components/cuktech_ble/translations/: en.json  zh-CN.json  zh-Hans.json
docs/: properties.md  protocol.md  reverse-engineering.md  usage.md
tests/: test_decrypt_btsnoop_miot.py  test_fe95.py  test_firmware.py  test_ha_skeleton.py  test_miot_spec.py  test_ports.py  test_properties.py  test_scanner.py  test_xiaomi_mi.py
tools/: README.md  ad1204u_adv_sniff.py  ad1204u_fetch_token.py  ad1204u_probe.py  ad1204u_read_props.py  ad1204u_register.py  ad1204u_register_probe.py  ad1204u_unauth_scan.py  btsnoop_att.py  decrypt_btsnoop_miot.py  mible_decrypt.py  sweep_logger.py  tablet_unlock.sh
